# querywise-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: README.md  export_sample_seed.py  load_semantic_layer.py
scripts/seed_data/: ifrs9_bundle.json  ifrs9_dictionary.json  ifrs9_glossary.json  ifrs9_knowledge.json  ifrs9_metrics.csv  ifrs9_metrics.json  ifrs9_sample_queries.json
src/querywise_mcp/: cli.py  config.py  formatting.py  server.py
src/querywise_mcp/connectors/: base_connector.py  connector_registry.py
src/querywise_mcp/connectors/bigquery/: connector.py
src/querywise_mcp/connectors/databricks/: connector.py
src/querywise_mcp/connectors/postgresql/: connector.py
src/querywise_mcp/connectors/sqlite/: connector.py
src/querywise_mcp/db/: init.py  session.py  types.py  vectors.py
src/querywise_mcp/db/models/: __init__.py  connection.py  dictionary.py  glossary.py  knowledge.py  metric.py  query_history.py  sample_query.py  schema_cache.py
src/querywise_mcp/llm/: base_provider.py  provider_registry.py  router.py
src/querywise_mcp/llm/agents/: error_handler.py  query_composer.py  result_interpreter.py  sql_validator.py
src/querywise_mcp/llm/providers/: anthropic_provider.py  ollama_provider.py  openai_provider.py
src/querywise_mcp/semantic/: context_builder.py  glossary_resolver.py  prompt_assembler.py  relevance_scorer.py  schema_linker.py
src/querywise_mcp/services/: connection_service.py  embedding_service.py  knowledge_service.py  query_service.py  sample_data.py  schema_service.py  semantic_service.py  setup_service.py
src/querywise_mcp/utils/: sql_sanitizer.py
