[project]
name = "querywise-mcp"
version = "0.1.0"
description = "MCP server (and CLI) for querying databases in natural language through a semantic layer"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "sqlite-vec>=0.1.6",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "sqlparse>=0.5",
    "cryptography>=43.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
]
bigquery = [
    "google-cloud-bigquery>=3.0",
]
databricks = [
    "databricks-sql-connector[pyarrow]>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
querywise = "querywise_mcp.cli:app"
querywise-mcp = "querywise_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
